# NewsListDataset

./: .gitignore  async_translate.py  checkers.py  cleaners.py  css_extractor.py  dataset_translate.py  filter.py  filter_intersection.py  loaddata.sh  pyproject.toml  train_test_split.py
css_selectors/: a168.json  a1obl.json  a1prime.json  a24_.json  a29.json  a47news.json  a62info.json  a73online.json  a76.json  a7info.json  a93.json  abnews.json  agryz-rt.json  aif.json  aksubayevo.json  alekseyevsk.json  allbashkiria.json  altaiaif.json  altapress.json  alternatio.json  amic.json  ap22.json  askino_info.json  astsite.json  atkarskgazeta.json  augustnews.json  baikalinform.json  baikalinform2.json  bakalzori.json  bashinform.json  battime.json  bavly.json  belizvest.json  berdsk-online.json  big-rostov.json  bk55.json  blagpanorama.json  bloknot-krasnodar.json  bloknot-rossosh.json  bloknot-rostov.json  (+272 more)
dataset/: 161.ru_16.json  161.ru_33.json  161.ru_42.json  161.ru_6.json  161.ru_9.json  1prime.ru_141.json  1prime.ru_176.json  1prime.ru_185.json  1prime.ru_5.json  1prime.ru_65.json  1prime.ru_9.json  1prime.ru_99.json  1tulatv.ru_24.json  1tulatv.ru_3.json  1tulatv.ru_35.json  1tulatv.ru_37.json  1tulatv.ru_48.json  24tnews.ru_120.json  24tnews.ru_18.json  24tnews.ru_192.json  24tnews.ru_228.json  24tnews.ru_24.json  24tnews.ru_84.json  29.ru_1.json  47news.ru_107.json  47news.ru_114.json  47news.ru_139.json  47news.ru_158.json  47news.ru_159.json  47news.ru_164.json  47news.ru_39.json  47news.ru_58.json  47news.ru_78.json  62info.ru_12.json  62info.ru_56.json  (+911 more)
(+28073 files in other folders)
